--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
@@ -32,6 +33,8 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.9",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "rollup": "^2.64.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-replace": "^2.2.0",
