--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
