created local_user utility entities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,10 @@
     "typeRoots": ["./src/types/global.d.ts"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
