--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "rollup --config rollup.config.js --environment NODE_ENV:production",
     "build:dev": "rollup --config rollup.config.js --environment NODE_ENV:development",
     "watch": "rollup --config rollup.config.js --watch",
-    "dev": "yarn watch --environment NODE_ENV:development"
+    "dev": "yarn watch --environment NODE_ENV:development",
+    "typeorm": "node -r ts-node/register ./node_modules/typeorm/cli.js",
+    "sync": "yarn typeorm schema:sync"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -32,6 +34,7 @@
     "@rollup/plugin-run": "^2.1.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.9",
     "@types/passport": "^1.0.7",
@@ -42,6 +45,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-tsconfig-paths": "^1.1.6",
     "rollup-plugin-typescript2": "^0.31.1",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   }
