--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sync": "yarn typeorm schema:sync"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^14.1.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-run": "^2.1.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.178",
