--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "ioredis": "^4.28.3",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
@@ -34,8 +36,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-run": "^2.1.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.18",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.7",
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.9",
