implemented local auth routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "$routes/*": ["./src/routes/*"],
       "$utils/*": ["./src/utils/*"],
       "$types/*": ["./src/types/*"],
+      "$services/*": ["./src/services/*"],
     },
     "typeRoots": ["./src/types/global.d.ts"]
   },
