--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "http-status-codes": "^2.2.0",
     "ioredis": "^4.28.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
@@ -30,7 +32,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^8.7.1",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
@@ -48,6 +51,7 @@
     "@types/passport-local": "^1.0.34",
     "rollup": "^2.64.0",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-tsconfig-paths": "^1.1.6",
