--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rollup-plugin-tsconfig-paths": "^1.1.6",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   }
