--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.9",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "rollup": "^2.64.0",
