--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "~2.6.9",
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.17.2",
     "http-status-codes": "^2.2.0",
     "ioredis": "^4.28.3",
