--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "express-session": "^1.17.2",
     "http-status-codes": "^2.2.0",
     "ioredis": "^4.28.3",
+    "knex": "^1.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
+    "objection": "^3.0.1",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
