--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.2",
     "http-status-codes": "^2.2.0",
     "ioredis": "^4.28.3",
+    "knex": "^1.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
@@ -33,7 +34,6 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^8.7.1",
-    "typeorm": "^0.2.41",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -51,6 +51,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
+    "knex-tiny-logger": "^2.1.0",
     "rollup": "^2.64.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
